# daming-nextjs-bazel-app

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  package.json
